[gd_scene load_steps=9 format=2]

[ext_resource path="res://scenes/tileset.tres" type="TileSet" id=1]
[ext_resource path="res://scenes/Goal.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/Player.tscn" type="PackedScene" id=3]
[ext_resource path="res://scenes/Crimeslime.tscn" type="PackedScene" id=4]
[ext_resource path="res://scenes/camera.tscn" type="PackedScene" id=5]
[ext_resource path="res://scenes/Block.tscn" type="PackedScene" id=6]
[ext_resource path="res://audio/big_bad_evil_guy.ogg" type="AudioStream" id=7]
[ext_resource path="res://scripts/BossFight.gd" type="Script" id=8]

[node name="BossFight" type="Node2D"]
script = ExtResource( 8 )
song_id = 1

[node name="Camera2D" parent="." instance=ExtResource( 5 )]

[node name="TileMap" type="TileMap" parent="." groups=["world"]]
tile_set = ExtResource( 1 )
cell_size = Vector2( 16, 16 )
format = 1
tile_data = PoolIntArray( 0, 0, 0, 1, 0, 0, 2, 0, 0, 3, 0, 0, 4, 0, 0, 5, 0, 0, 6, 0, 0, 7, 0, 0, 8, 0, 0, 9, 0, 0, 65536, 0, 0, 65537, 0, 0, 65544, 0, 0, 65545, 0, 0, 131072, 0, 0, 131081, 0, 0, 196608, 0, 0, 196617, 0, 0, 262144, 0, 0, 262153, 0, 0, 327680, 0, 0, 327689, 0, 0, 393216, 0, 0, 393225, 0, 0, 458752, 0, 0, 458761, 0, 0, 524288, 0, 0, 524289, 0, 0, 524296, 0, 0, 524297, 0, 0, 589824, 0, 0, 589825, 0, 0, 589826, 0, 0, 589827, 0, 0, 589828, 0, 0, 589829, 0, 0, 589830, 0, 0, 589831, 0, 0, 589832, 0, 0, 589833, 0, 0 )

[node name="Goal" parent="." instance=ExtResource( 2 )]
visible = false
position = Vector2( 128, 16 )

[node name="Crimeslime" parent="." instance=ExtResource( 4 )]
position = Vector2( 112, 80 )
MOVE_SPEED = 16

[node name="Player" parent="." instance=ExtResource( 3 )]
position = Vector2( 32, 64 )

[node name="Block" parent="." instance=ExtResource( 6 )]
position = Vector2( 64, 64 )

[node name="Block2" parent="." instance=ExtResource( 6 )]
position = Vector2( 80, 80 )

[node name="StartTimer" type="Timer" parent="."]
one_shot = true

[node name="EndTimer" type="Timer" parent="."]
one_shot = true

[node name="Music" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )

[connection signal="timeout" from="StartTimer" to="." method="_on_StartTimer_timeout"]
[connection signal="timeout" from="EndTimer" to="." method="_on_EndTimer_timeout"]
